Fixed alignment issues on the TouchPad related to the recent change to display the user's real name

--- a/stylesheets/phnx.css
+++ b/stylesheets/phnx.css
@@ -449,6 +449,7 @@ body.no-gesture {  /* touchpad/emulator */
 	display: inline-block;
 	float: left;
 }
+
 .tweet-avatar{
 	display: inline-block;
 	height: 48px;
@@ -526,13 +527,27 @@ body.no-gesture {  /* touchpad/emulator */
 	width: 100%;
 }
 
-.tweet-text{
-	max-width: 236px;
+.content-wrapper {
 	width: 236px;
+}
+
+.toaster .content-wrapper {
+	width: 100%;
+}
+
+.tweet-text{
 	clear: both;
 }
+
+.small-device .tweet-text,
+.medium-device .tweet-text {
+	max-width: 236px;
+	width: 236px;
+}
+
 .toaster .tweet-text{
 	max-width: none;
+	width: 100%;
 }
 
 .tweet-text.user-tweet{
@@ -542,6 +557,7 @@ body.no-gesture {  /* touchpad/emulator */
 .tweet-footer.user-tweet{
 	padding: 0px 10px;
 }
+
 @-webkit-keyframes spin {
   from {
     -webkit-transform: rotate(0deg);
